[package]
name = "aheadlibex-rs"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
rfd = "0.14"
goblin = { version = "0.8", default-features = false, features = ["pe64", "std"] }
memmap2 = "0.9"
uuid = { version = "1", features = ["v4", "fast-rng"] }
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.release]
opt-level = 3          # 最高性能优化
lto = "fat"            # 全量 LTO，最强优化
codegen-units = 1      # 单 codegen unit，利于跨模块优化
panic = "abort"        # 更快、更简单
strip = false          # 保留符号（方便调试 & stacktrace）
incremental = false    # 避免影响优化质量
debug = false          # 不生成调试信息
